# lucid_pixel

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  imgui.vcxproj  imgui.vcxproj.filters  lucid_pixel  lucid_pixel.sln  lucid_pixel.vcxproj  lucid_pixel.vcxproj.filters  main.cpp  run_build.sh
includes/: Camera.hpp  Shader.cpp  Shader.hpp  load_texture.cpp  load_texture.hpp  mesh_loader.cpp  mesh_loader.hpp  stb_image.h
includes/glad/include/glad/: glad.h
src/: Shader.hpp  a.out  glad.c  load_texture.hpp  lucid_pixel  main  main.cpp
src/shaders/: cube.fragment  cube.vertex  example.cpp  fragment.shader  fragment2.shader  lamp.fragment  lamp.vertex  lightCube.fragment  vertex.shader
